--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-fullpage": "^2.0.5",
     "vue-fullpage.js": "^0.1.7"
   },
   "devDependencies": {
