--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,16 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "jquery": "^3.6.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0",
-    "vue-fullpage": "^2.0.5",
+    "vue": "^2.6.11",
     "vue-fullpage.js": "^0.1.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "bootstrap": "^4.0.0-beta",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
